Fix API 26 compatibility and cache latest matched lyrics